# Assets

./: README.md  com.github.sheep.farm.assets.json  meson.build  wheels_list.txt
data/: com.github.sheep.farm.assets.desktop.in  com.github.sheep.farm.assets.gschema.xml  com.github.sheep.farm.assets.metainfo.xml.in  com.github.sheep.farm.assets.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: assets.gresource.xml  assets.in  graph_io.py  main.py  meson.build  node.py  node_dialogs.py  node_library.py  output_panel.py  window.py  window.ui
src/blp/: meson.build  window.blp
wheels/: fredapi-0.5.2-py3-none-any.whl  mizani-0.14.3-py3-none-any.whl  plotnine-0.15.1-py3-none-any.whl
